--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
   --border-radius-small: 0.125rem;
   --border-radius-normal: 0.25rem;
   --border-radius-big: 0.5rem;
-  --border-radius-button: 6.25rem;
+  --border-radius-button: 1rem;
 
   /* Transitions */
   --transition-fast: 0.2s ease-in-out;
@@ -293,7 +293,7 @@ section {
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url("public/images/electra-logo-horizontal-black.svg");
+  background-image: url("public/images/electra-logo-horizontal-black.png");
   background-repeat: no-repeat;
   background-size: 10vw;
   background-position: center;
@@ -306,7 +306,7 @@ section {
   24% {
     opacity: 1;
     background-size: 20vw;
-    background-image: url("public/images/electra-logo-horizontal-black.svg");
+    background-image: url("public/images/electra-logo-horizontal-black.png");
   }
   25%,
   49% {
@@ -315,7 +315,7 @@ section {
   }
   50%,
   74% {
-    background-image: url("public/images/electra-logo-horizontal-black.svg");
+    background-image: url("public/images/electra-logo-horizontal-black.png");
   }
   75%,
   99% {
@@ -1067,7 +1067,7 @@ footer {
 
 @media (max-width: 500px) {
   :root {
-  --font-size-h1: 5rem;
+  --font-size-h1: 3rem;
   --font-size-h2: 2.5rem;
   --font-size-h3: 2.3rem;
   --font-size-h4: 2rem;
@@ -1080,6 +1080,7 @@ footer {
 
 @media (max-width: 800px) {
   :root {
+      --font-size-h1: 4rem;
     --font-size-body: 1.25rem;
   }
 
@@ -1160,12 +1161,20 @@ footer {
 
   .section-hero {
     min-height: unset;
+    height: unset;
+    max-height: min-content;
+    aspect-ratio: unset;
     padding: var(--gap-big);
     max-width: calc(100vw - var(--gap-big) * 2);
   }
 
   .hero-content {
     padding: var(--gap-small);
+    padding-top: 10rem;
+  }
+
+  #hero-title {
+    max-width: 75vw;
   }
 
   .details-block,
