--- a/styles.css
+++ b/styles.css
@@ -577,6 +577,8 @@ section {
   width: 100%;
   max-width: var(--container-max-width);
   margin: 0 auto;
+  padding-left:  var(--gap-normal);
+  padding-right: var(--gap-normal);
 }
 
 .details-block {
@@ -584,7 +586,7 @@ section {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: var(--gap-extra-big);
   width: 100%;
   opacity: 0;
   transform: translateY(1.25rem);
@@ -850,6 +852,8 @@ footer {
   display: grid;
 
   max-width: var(--container-max-width);
+  padding-left: var(--gap-normal);
+  padding-right: var(--gap-normal);
 }
 
 .about-us-image-1 {
